--- a/a-package/package.json
+++ b/a-package/package.json
@@ -1,8 +1,20 @@
 {
   "name": "a-package",
+  "type": "module",
+  "module": "./index.js",
+  "types": "./index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./index.d.ts",
+      "import": "./index.js"
+    }
+  },
   "packageManager": "yarn@4.8.0",
   "devDependencies": {
-    "tsdown": "^0.11.5",
+    "tsdown": "^0.11.12",
     "typescript": "^5.8.3"
+  },
+  "scripts": {
+    "build": "tsdown --entry ./index.ts --out ./dist --dts"
   }
 }
